Edited index.html into a "blog"

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -6,7 +6,11 @@
     </head>
 
     <body>
-        <h1>Yo, King</h1>
-        <h2>One Piece fan</h2>
+        <h1>King's Blog</h1>
+        <p>Welcome to the blog</p>
+
+        <h2>For One Piece fans</h2>
+        <p>Episode <strong>1062</strong> had <em>sensational</em> animation.</p>
+        <p><strong>Gear 5</strong> Luffy will be even better!</p>
     </body>
 </html>
