--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -8,7 +8,7 @@
     <body>
         <h1>King's Blog</h1>
         <p>Welcome to the blog</p>
-
+        <!-- Intro message -->
         <h2>For One Piece fans</h2>
         <p>Episode <strong>1062</strong> had <em>sensational</em> animation.</p>
         <p><strong>Gear 5</strong> Luffy will be even better!</p>
