Added content to body of file.

--- a/odin-recipes/recipes/parmegiana.html
+++ b/odin-recipes/recipes/parmegiana.html
@@ -8,6 +8,30 @@
 </head>
 <body>
     <h1>Parmegiana</h1>
-    
+    <img src="../images/Parmegiana.avif" alt="Finished Parmegiana"> 
+    <h2>Description</h2>
+    <p>Parmigiana is a classic  Italian dish made with 
+        thinly sliced, floured, and fried chicken layered 
+        with tomato sauce and cheese, and baked in the oven.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>chicken breast</li>
+        <li>salt and pepper</li>
+        <li>eggs</li>
+        <li>panko bread crumbs</li>
+        <li>parmesan cheese and mozarella cheese</li>
+        <li>flour</li>
+        <li>olive oil and frying oil</li>
+        <li>tomato sauce</li>
+    </ul>
+    <ol>
+        <li>Preheat oven to 450 degrees</li>
+        <li>Season chicken and evenly coat both sides with flour</li>
+        <li>Dip chicken into beated eggs and then dip into 
+            bread crumbs</li>
+        <li>Fry chicken in pan for 2 minutes each side</li>
+        <li>Cover chicken with tomato sauce and cheese</li>
+        <li>Place chicken in oven for 15-20 minutes</li>
+    </ol>
 </body>
 </html>
