added rice and beans page link

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/parmegiana.html">Parmegiana Recipe</a>
+    <a href="./recipes/rice-beans.html">Rice and Beans Recipe</a>
 </body>
 </html>
