chenged recipes in index.html to unordered list

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/parmegiana.html">Parmegiana Recipe</a>
-    <a href="./recipes/rice-beans.html">Rice and Beans Recipe</a>
+    <ul>
+        <li><a href="./recipes/parmegiana.html">Parmegiana Recipe</a></li>
+        <li><a href="./recipes/rice-beans.html">Rice and Beans Recipe</a></li>
+    </ul>
 </body>
 </html>
