added content in body for rice and beans recipe

--- a/odin-recipes/recipes/rice-beans.html
+++ b/odin-recipes/recipes/rice-beans.html
@@ -8,23 +8,27 @@
 </head>
 <body>
     <h1>Rice and Beans</h1>
-    <img src="" alt="Finished Rice and Beans"> 
+    <img src="../images/rice-and-beans.jpeg" alt="Finished Rice and Beans"> 
     <h2>Description</h2>
-    <p></p>
+    <p>Rice and beans, or beans and rice, is a category of dishes from 
+    many cultures around the world, whereby the staple 
+    foods of rice and beans are combined in some manner.</p>
     <h3>Ingredients</h3>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>rice</li>
+        <li>cooked beans</li>
+        <li>salt</li>
+        <li>olive oil</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li></li>
+        <li>Throw 2 cups of rice and water in the cooking pot</li>
+        <li>Throw 1 tablspoon of olive oil and salt in the cooking pot</li>
+        <li>Wait until water is boiling, then lower temperature to low
+        and put lid on pot.</li>
+        <li>Wait for 20 minutes until rice is cooked, heat cooked beans 
+        in the meanwhile </li>
+        <li> Combine both to get the rice and beans plate</li>
     </ol>
 </body>
 </html>
