--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./recipes/parmegiana.html">Parmegiana Recipe</a></li>
         <li><a href="./recipes/rice-beans.html">Rice and Beans Recipe</a></li>
+        <li><a href="./recipes/steak.html">Steak Recipe</a></li>
     </ul>
 </body>
 </html>
