added steak description

--- a/odin-recipes/recipes/steak.html
+++ b/odin-recipes/recipes/steak.html
@@ -10,7 +10,8 @@
     <h1>Steak</h1>
     <img src="../images/steak.jpeg" alt="Finished Steak"> 
     <h2>Description</h2>
-    <p></p>
+    <p>A steak is a thick cut of meat generally sliced across the muscle 
+    fibers, sometimes including a bone. It is normally grilled or fried.</p>
     <h3>Ingredients</h3>
     <ul>
         <li>steak </li>
