--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="Title">Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/parmegiana.html">Parmegiana Recipe</a></li>
-        <li><a href="./recipes/rice-beans.html">Rice and Beans Recipe</a></li>
-        <li><a href="./recipes/steak.html">Steak Recipe</a></li>
+        <li><a href="./recipes/parmegiana.html"><button>Parmegiana Recipe</button></a></li>
+        <li><a href="./recipes/rice-beans.html"><button> Rice and Beans Recipe</button></a></li>
+        <li><a href="./recipes/steak.html"><button> Recipe</button></a></li>
     </ul>
 </body>
 </html>
