--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <h1 class="Title">Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/parmegiana.html"><button>Parmegiana Recipe</button></a></li>
-        <li><a href="./recipes/rice-beans.html"><button> Rice and Beans Recipe</button></a></li>
-        <li><a href="./recipes/steak.html"><button> Recipe</button></a></li>
-    </ul>
+    <div class="menu">
+        <a href="./recipes/parmegiana.html"><button>Parmegiana Recipe</button></a>
+        <a href="./recipes/rice-beans.html"><button> Rice and Beans Recipe</button></a>
+        <a href="./recipes/steak.html"><button> Steak Recipe</button></a>
+    </div>
 </body>
 </html>
