--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox example</title>
@@ -11,10 +11,10 @@
     <div class="menu-container">
         <div class="menu">
             <div class="date">Aug 14, 2016</div>
-            <div class="links">
-                <div class="signup">Sign Up</div>
-                <div class="login">Login</div>
-            </div>
+            <!--<div class="links">-->
+            <div class="signup">Sign Up</div>
+            <div class="login">Login</div>
+            <!--</div>-->
         </div>
     </div>
     <div class="header-container">
@@ -43,6 +43,10 @@
           </div>
         </div>
       </div>
-      
+      <div class='footer'>
+        <div class='footer-item footer-one'></div>
+        <div class='footer-item footer-two'></div>
+        <div class='footer-item footer-three'></div>
+      </div>
 </body>
 </html>
