styled index.html using flexbox, still practicing

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -8,8 +8,15 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1 class="Title">Odin Recipes</h1>
-    <div class="menu">
+    <div class="header-container">
+        <div class="header">
+            <div class="subscribe">Subscribe</div>
+            <h1 class="Title">Odin Recipes</h1>
+            <div class="login">Login</div>
+            <div class="sign-up">Sign Up</div>
+        </div>
+    </div>
+    <div class="menu-container">
         <a href="./recipes/parmegiana.html"><button>Parmegiana Recipe</button></a>
         <a href="./recipes/rice-beans.html"><button> Rice and Beans Recipe</button></a>
         <a href="./recipes/steak.html"><button> Steak Recipe</button></a>
