added menubar using flexbox, work in progress

--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -17,9 +17,13 @@
         </div>
     </div>
     <div class="menu-container">
-        <a href="./recipes/parmegiana.html"><button>Parmegiana Recipe</button></a>
-        <a href="./recipes/rice-beans.html"><button> Rice and Beans Recipe</button></a>
-        <a href="./recipes/steak.html"><button> Steak Recipe</button></a>
+        <div class="menu">
+            <div class="links">
+                <a href="./recipes/parmegiana.html"><button>Parmegiana Recipe</button></a>
+                <a href="./recipes/rice-beans.html"><button> Rice and Beans Recipe</button></a>
+                <a href="./recipes/steak.html"><button> Steak Recipe</button></a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
