changed content-item to left and right, trying to find how to position them correctly

--- a/TOP_website/index.html
+++ b/TOP_website/index.html
@@ -18,7 +18,7 @@
             </ul>
         </div>
         <div class="content-container">
-            <div class="content-item">
+            <div class="content-item-left">
                 <div class="left-top">This website is awesome</div>
                 <div class="left-text">This website has some subtext that goes 
                     here under the main title. It's a smaller font and the 
@@ -27,7 +27,7 @@
                 <div class="button"><button>Sign up</button></div>
             </div>
 
-            <div class="content-item"> <img src="#"> </div>
+            <div class="content-item-right"> <img src="#"> </div>
         </div>
     </div>
 </body>
