added second and third section of website

--- a/TOP_website/index.html
+++ b/TOP_website/index.html
@@ -24,11 +24,51 @@
                     here under the main title. It's a smaller font and the 
                     color is lower contrast
                 </div>
-                <div class="button"><button>Sign up</button></div>
+                <div class="button-1"><button>Sign up</button></div>
             </div>
-
             <div class="content-item-right"> <img src="#"> </div>
         </div>
+    </div>
+
+    <div class="second-container">
+        <div class="sec-header">
+            Some Random Information.
+        </div>
+        <div class="items-container">
+            <div class="items">
+                <div class="image-info"></div>
+                <div class="info">this is some subtext under an illustration 
+                    or image
+                </div>
+            </div>
+            <div class="items">
+                <div class="image-info"></div>
+                <div class="info">this is some subtext under an illustration 
+                    or image
+                </div>
+            </div>
+            <div class="items">
+                <div class="image-info"></div>
+                <div class="info">this is some subtext under an illustration 
+                    or image
+                </div>
+            </div>
+            <div class="items">
+                <div class="image-info"></div>
+                <div class="info">this is some subtext under an illustration 
+                    or image
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="third-container">
+        <div class="quote">This is an inspiring quote, or a testimonial 
+            from a customer. Maybe it's just filling up space, or 
+            maybe people will actually read it. Who knows? All I know
+            is that it looks nice.
+        </div>
+        <div class="author">-Thor, God of Thunder</div>
     </div>
 </body>
 </html>
