--- a/TOP_website/index.html
+++ b/TOP_website/index.html
@@ -82,5 +82,9 @@
             </div>
         </div>
     </div>
+
+    <div class="footer">
+        <div class="footer-text">Copyright © The Odin Project 2021</div>
+    </div>
 </body>
 </html>
