changed script content

--- a/javascript-tutorial/index.html
+++ b/javascript-tutorial/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
     <script>
-        let max =57
-        let actual = max - 13
-        let percentage = actual/max
-        console.log(percentage)
+        function add7(num) {
+            return num + 7;
+        }
+        console.log(add7(5));
+
+        let multiply = function (a, b){ 
+            return a * b;
+        }
+        console.log(multiply(3, 5));
 
     </script>
 </body>
